Add prefix + r for sourcing tmux.conf
Fix #2

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,2 +1,4 @@
 # tmux configuration for Sal Ferrarello (@salcode)
 
+# Reload config file (prefix + r), this is helpful when making changes to the config file.
+bind r source-file ~/.tmux.conf
