--- a/tmux.conf
+++ b/tmux.conf
@@ -2,3 +2,7 @@
 
 # Reload config file (prefix + r), this is helpful when making changes to the config file.
 bind r source-file ~/.tmux.conf
+
+# http://unix.stackexchange.com/questions/23138/esc-key-causes-a-small-delay-in-terminal-due-to-its-alt-behavior
+# remove esc delay
+set -s escape-time 0
