Change status line color to gray.
Fix #3

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,3 +6,7 @@ bind r source-file ~/.tmux.conf
 # http://unix.stackexchange.com/questions/23138/esc-key-causes-a-small-delay-in-terminal-due-to-its-alt-behavior
 # remove esc delay
 set -s escape-time 0
+
+# Change status line color to gray.
+set -g status-bg '#666666'
+set -g status-fg '#eeeeee'
