Open new window with current path
Fix #4

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,3 +10,6 @@ set -s escape-time 0
 # Change status line color to gray.
 set -g status-bg '#666666'
 set -g status-fg '#eeeeee'
+
+# Use current path when creating a new window. (prefix + c)
+bind c new-window -c "#{pane_current_path}"
