Open new pane (prefix + " or prefix + %) with current path
Fix #5

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,3 +13,9 @@ set -g status-fg '#eeeeee'
 
 # Use current path when creating a new window. (prefix + c)
 bind c new-window -c "#{pane_current_path}"
+
+# Use current path when creating a new vertical (prefix + ") or horiztonal (prefix + %) pane.
+unbind '"'
+bind '"' split-window -h -c '#{pane_current_path}'
+unbind '%'
+bind '%' split-window -v -c '#{pane_current_path}'
