Use Vi navigation in copy mode
Fix #6

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,6 +7,9 @@ bind r source-file ~/.tmux.conf
 # remove esc delay
 set -s escape-time 0
 
+# Use Vi navigation in copy mode.
+setw -g mode-keys vi
+
 # Change status line color to gray.
 set -g status-bg '#666666'
 set -g status-fg '#eeeeee'
