--- a/tmux.conf
+++ b/tmux.conf
@@ -22,3 +22,12 @@ unbind '"'
 bind '"' split-window -h -c '#{pane_current_path}'
 unbind '%'
 bind '%' split-window -v -c '#{pane_current_path}'
+
+# Use Ctrl + h/j/k/l to navigate tmux panes (which also permitting this behavior in Vim for navigating splits)
+# See vim plugin and instructions https://github.com/christoomey/vim-tmux-navigator
+# https://robots.thoughtbot.com/seamlessly-navigate-vim-and-tmux-splits
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
