Add Alt + Arrow Key big jump resize pane shortcuts
Fix #9

--- a/tmux.conf
+++ b/tmux.conf
@@ -31,3 +31,10 @@ bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
+
+# Resize Pane with large jumps using Alt + Up Arrow (Down, Left, Right)
+# Note: These commands do not require the Tmux prefix
+bind -n M-Up    resize-pane -U 15
+bind -n M-Down  resize-pane -D 15
+bind -n M-Left  resize-pane -L 25
+bind -n M-Right resize-pane -R 25
