Start Window Numbering at 1 instead of 0
Fix #10

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,8 @@
 # tmux configuration for Sal Ferrarello (@salcode)
 
+# Start Window Numbering at 1 instead of 0
+set -g base-index 1
+
 # Reload config file (prefix + r), this is helpful when making changes to the config file.
 bind r source-file ~/.tmux.conf
 
