Modify background color of Active and Inactive Panes
Fix #11

--- a/tmux.conf
+++ b/tmux.conf
@@ -17,6 +17,10 @@ setw -g mode-keys vi
 set -g status-bg '#666666'
 set -g status-fg '#eeeeee'
 
+# Set background colors for active and inactive panes
+setw -g window-active-style 'bg=#330000' # active pane
+setw -g window-style        'bg=#000000' # inactive pane(s)
+
 # Use current path when creating a new window. (prefix + c)
 bind c new-window -c "#{pane_current_path}"
 
