Make active pane text gray
Fixes #12

--- a/tmux.conf
+++ b/tmux.conf
@@ -12,14 +12,17 @@ set -s escape-time 0
 
 # Use Vi navigation in copy mode.
 setw -g mode-keys vi
+# bind -t vi-copy v begin-selection
+# bind -t vi-copy y copy-selection
+# bind -t vi-copy V rectangle-toggle
 
 # Change status line color to gray.
 set -g status-bg '#666666'
 set -g status-fg '#eeeeee'
 
 # Set background colors for active and inactive panes
-setw -g window-active-style 'bg=#330000' # active pane
-setw -g window-style        'bg=#000000' # inactive pane(s)
+setw -g window-active-style 'fg=colour250,bg=#330000' # active pane
+setw -g window-style        'fg=#444444,bg=#000000' # inactive pane(s)
 
 # Use current path when creating a new window. (prefix + c)
 bind c new-window -c "#{pane_current_path}"
