Prevent Window name from updating
Fixes #13

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,6 +10,10 @@ bind r source-file ~/.tmux.conf
 # remove esc delay
 set -s escape-time 0
 
+# Prevet the Window name from updating
+# http://superuser.com/a/616093/571047
+set-option -g allow-rename off
+
 # Use Vi navigation in copy mode.
 setw -g mode-keys vi
 # bind -t vi-copy v begin-selection
