Add confirmation message when reloading configuration.
Fixes #14

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,7 +4,7 @@
 set -g base-index 1
 
 # Reload config file (prefix + r), this is helpful when making changes to the config file.
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded."
 
 # http://unix.stackexchange.com/questions/23138/esc-key-causes-a-small-delay-in-terminal-due-to-its-alt-behavior
 # remove esc delay
