--- a/tmux.conf
+++ b/tmux.conf
@@ -15,10 +15,7 @@ set -s escape-time 0
 set-option -g allow-rename off
 
 # Use Vi navigation in copy mode.
-setw -g mode-keys vi
-# bind -t vi-copy v begin-selection
-# bind -t vi-copy y copy-selection
-# bind -t vi-copy V rectangle-toggle
+set-window-option -g mode-keys vi
 
 # Change status line color to gray.
 set -g status-bg '#666666'
