In copy mode map v to begin-selection
See #7

--- a/tmux.conf
+++ b/tmux.conf
@@ -16,6 +16,7 @@ set-option -g allow-rename off
 
 # Use Vi navigation in copy mode.
 set-window-option -g mode-keys vi
+bind-key -t vi-copy 'v' begin-selection
 
 # Change status line color to gray.
 set -g status-bg '#666666'
