--- a/tmux.conf
+++ b/tmux.conf
@@ -17,6 +17,7 @@ set-option -g allow-rename off
 # Use Vi navigation in copy mode.
 set-window-option -g mode-keys vi
 bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
 
 # Change status line color to gray.
 set -g status-bg '#666666'
