Modify `y` command in vi-mode to copy to clipboard
See #15

--- a/tmux.conf
+++ b/tmux.conf
@@ -17,7 +17,7 @@ set-option -g allow-rename off
 # Use Vi navigation in copy mode.
 set-window-option -g mode-keys vi
 bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+bind-key -t vi-copy 'y' copy-pipe "pbcopy"
 bind-key -t vi-copy 'r' rectangle-toggle
 
 # Change status line color to gray.
