--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,8 @@
 # tmux configuration for Sal Ferrarello (@salcode)
 
+# Set focus-events on (important for Neovim autoread)
+set -g focus-events on
+
 # Start Window Numbering at 1 instead of 0
 set -g base-index 1
 
