Add Tmux TPM and Resurrect plugin
See #22

--- a/tmux.conf
+++ b/tmux.conf
@@ -56,3 +56,16 @@ bind -n M-Up    resize-pane -U 15
 bind -n M-Down  resize-pane -D 15
 bind -n M-Left  resize-pane -L 25
 bind -n M-Right resize-pane -R 25
+
+# tmux-resurrect settings to be used with Tim Pope's Vim Obsession plugin https://github.com/tpope/vim-obsession
+set -g @resurrect-strategy-vim 'session'
+set -g @resurrect-strategy-nvim 'session'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-save-shell-history 'on'
+#
+# tmux plugins (keep this at the very bottom)
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
