Improve (Neovim) color rendering

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,6 +6,10 @@ set -g focus-events on
 # Start Window Numbering at 1 instead of 0
 set -g base-index 1
 
+# Improve (Neovim) color rendering.
+# https://github.com/neovim/neovim/wiki/FAQ#colors-arent-displayed-correctly
+set -g default-terminal "screen-256color"
+
 # Reload config file (prefix + r), this is helpful when making changes to the config file.
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded."
 
