Improve inactive/active pane colors
- Replace maroon active background with near black
- Replace gray inactive background with lighter gray
- Replace gray inactive foreground with lighter gray

Fixes #34

--- a/tmux.conf
+++ b/tmux.conf
@@ -33,8 +33,8 @@ set -g status-bg '#666666'
 set -g status-fg '#eeeeee'
 
 # Set background colors for active and inactive panes
-setw -g window-active-style 'fg=colour250,bg=#330000' # active pane
-setw -g window-style        'fg=#444444,bg=#222222' # inactive pane(s)
+setw -g window-active-style 'fg=colour250,bg=#191919' # active pane
+setw -g window-style        'fg=#4A4A4A,bg=#2A2A2A' # inactive pane(s)
 
 # Use current path when creating a new window. (prefix + c)
 bind c new-window -c "#{pane_current_path}"
